--- a/EtiquetasolucionWS/.project
+++ b/EtiquetasolucionWS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EtiquetasolucionWS_</name>
+	<name>EtiquetasolucionWS</name>
 	<comment></comment>
 	<projects>
 		<project>WSCommon</project>
